# server/server.js
@@ -106,11 +106,9 @@ server.use('/', systemRoute.getRouter())
 // Swagger UI
 const express = require('express')
 const swaggerUrl = config.proxyPrefixPath.uri + '/swagger'
-const pathToSwaggerUi = require('swagger-ui-dist').absolutePath()
 const redirectUrl = `${swaggerUrl}?url=${getPaths().system.swagger.uri}`
-
 server.use(swaggerUrl, createSwaggerRedirectHandler(redirectUrl, config.proxyPrefixPath.uri))
-server.use(swaggerUrl, express.static(pathToSwaggerUi))
+server.use(swaggerUrl, express.static(path.join(__dirname, '../node_modules/swagger-ui/dist')))
 
 // Add API endpoints defined in swagger to path definitions so we can use them to register API enpoint handlers
 addPaths('api', createApiPaths({
@@ -130,8 +128,7 @@ const paths = getPaths()
 // Api enpoints
 apiRoute.register(paths.api.checkAPIkey, System.checkAPIKey)
 
-apiRoute.register(paths.api.getDataById, Sample.getData)
-apiRoute.register(paths.api.postDataById, Sample.postData)
+apiRoute.register(paths.api.requestRoundStatisticsByLadokId, Sample.requestRoundStatisticsByLadokId)
 server.use('/', apiRoute.getRouter())
 
 // Catch not found and errors
